all done setup with responsive

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 <body>
 
     <div class="top-bar">
+
+        <div class="toggleMenu" onclick="toggleMenu(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+
         <div class="container">
             <div class="row">
                 
@@ -35,6 +42,19 @@
                             <li><a href="#">About Us</a></li>
                             <li><a href="#">Services</a></li>
                             <li><a href="#">Blogs</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                 <!-- mobile side-menu -->
+                 <div class="mobile-nav">
+                    <div id="mySidenav" class="sidenav">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Blog</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
